--------------------------------------------------------------------------------------------------
Release notes version 1.9.4 : Enhancements, modifications and corrected bugs since version 1.9.3 :
--------------------------------------------------------------------------------------------------
13/03/24 (TrioCFD) New feature : FT IJK - Implementation of a spectral forcing method for FT IJK compatible with a bubble swarm
06/03/24 (TrioCFD) New feature : FT IJK - First implementation of a one-dimensional thermal sub-resolution technique in the vicinity of bubble's interfaces and exploration of various thermal coupling strategies with IJK discretisation. 
06/03/24 (TrioCFD) Syntax      : FT IJK - Syntax changed for type_velocity_convection_op and type_velocity_diffusion_op, you should now use velocity_convection_op and velocity_diffusion_op in your datafiles
12/02/24 (TrioCFD) New feature : Algo_QC - New feature 'Algo_QC' added 

--------------------------------------------------------------------------------------------------
Release notes version 1.9.3 : Enhancements, modifications and corrected bugs since version 1.9.2 :
--------------------------------------------------------------------------------------------------
30/11/23 (TrioCFD) New feature : Turbulence - k-omega turbulence model (Wilcox 1988 and SST variant) has been implemented in Turbulence section (validation still in progress)
29/11/23 (TrioCFD) Tests       : FSI- New validation report for the fluid-structure partitioned internal coupling (Beam_Free_Vibration)
24/11/23 (TrioCFD) Bug fix     : FSI- Extrait surface on mobile walls ( new keyword Extrait_surface_ALE)
23/11/23 (TrioCFD) Bug fix     : FSI- Compute the y+ for mobile walls
23/11/23 (TrioCFD) New feature : FTD - solid/fluid thermal coupling using TCL model
15/11/23 (TrioCFD) New feature : CMFD - Latest multiphase Euler-Euler developments : simplifying single-phase turbulence, adding bubble induced agitation models and adding test cases.