@@ -93,8 +93,7 @@ Read pb
 	  turbulence_paroi loi_standard_hydr
 	}
 	
-	Ecrire_fichier_xyz_valeur vitesse 100. bords 1 PERIO	
-	Ecrire_fichier_xyz_valeur K_Eps 100. bords 1 PERIO		
+	Ecrire_fichier_xyz_valeur { dt 100. fields 2 vitesse K_Eps boundaries 1 PERIO }
     }
     Post_processing
     {       
